<resources>
    <string name="app_name">Finanzplanung</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_login">Login</string>
    <string name="txt_logo">Finanzplanung</string>
    <string name="bt_vergessen">Vergessen</string>
    <string name="bt_registrierung">Registrierung</string>
    <string name="title_activity_activity_registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">eMail</string>
    <string name="passwort">Passwort</string>
    <string name="oldpasswort">Altes Passwort</string>
    <string name="passwortValidation">Passwort wiederhollen</string>
    <string name="bt_ok">OK</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="Gruppenverwaltung">Gruppenverwaltung</string>
    <string name="Settings">Einstellungen</string>
    <string name="title_activity_activity_settings">ActivitySettings</string>
    <string name="SyncOverLTE">Mobile Sync</string>
    <string name="Server">Server</string>
    <string name="newPasswort">Neues Passwort</string>
    <string name="bt_Save">Save</string>
    <string name="title_activity_activity_gruppenverwaltung">ActivityGruppenverwaltung</string>
    <string name="bt_createGruppe">Gruppe erstellen</string>
    <string name="title_activity_activity_gruppenmitglieder">ActivityGruppenmitglieder</string>
    <string name="bt_addMitglied">Mitglied hinzufügen</string>
    <string name="title_activity_activity_finanzen">ActivityFinanzen</string>
    <string name="bt_addBetrag">+</string>
    <string name="gesamtbetrag">Gesamt</string>
    <string name="bt_logout">Logout</string>
    <string name="bt_resetDB">Reset</string>
</resources>
