<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActivityLogin"
    android:clickable="false"
    android:background="#ff575757">

    <TextView android:text="@string/txt_logo" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_login"
        android:id="@+id/button"
        android:layout_below="@+id/button2"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:layout_marginTop="159dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_vergessen"
        android:id="@+id/button2"
        android:singleLine="false"
        android:layout_below="@+id/email"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_registrierung"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwort"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/passwort"
        android:layout_alignStart="@+id/passwort" />

</RelativeLayout>
