<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.htw.finanzplanung.ActivitySettings"
    android:background="#000000">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/SyncOverLTE"
                    android:id="@+id/textView7"
                    android:textColor="#808080"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Server"
                    android:id="@+id/textView8"
                    android:textColor="#808080"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newPasswort"
                    android:id="@+id/textView9"
                    android:textColor="#808080"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/email"
                    android:id="@+id/textView10"
                    android:textColor="#808080"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name"
                    android:id="@+id/textView11"
                    android:textColor="#808080"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_Save"
                    android:id="@+id/bt_save" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_wlan"
                    android:layout_gravity="right"
                    android:backgroundTint="#808080"
                    android:background="#808080"
                    android:textColor="#808080"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:textColor="#808080"
                    android:backgroundTint="#808080"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwort"
                    android:textColor="#808080"
                    android:backgroundTint="#808080"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/email"
                    android:textColor="#808080"
                    android:backgroundTint="#808080"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/name"
                    android:textColor="#808080"
                    android:backgroundTint="#808080"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
